--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.7.5",
+    "@nuxt/ui": "^3.0.2",
     "@nuxthub/core": "^0.8.12",
-    "nuxt": "^3.15.2"
+    "nuxt": "^3.15.2",
+    "nuxt-auth-utils": "^0.5.19"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.7.5",
