--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "deploy": "npx nuxthub deploy",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "typecheck": "nuxt typecheck"
+    "typecheck": "nuxt typecheck",
+    "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
     "@nuxt/eslint": "^0.7.5",
     "@nuxt/ui": "^3.0.2",
     "@nuxthub/core": "^0.8.12",
+    "drizzle-orm": "^0.41.0",
     "nuxt": "^3.15.2",
     "nuxt-auth-utils": "^0.5.19"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.7.5",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9.18.0",
     "vue-tsc": "^2.2.0",
     "wrangler": "3.103.2"
