--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@nuxthub/core": "^0.8.12",
     "drizzle-orm": "^0.41.0",
     "nuxt": "^3.15.2",
-    "nuxt-auth-utils": "^0.5.19"
+    "nuxt-auth-utils": "^0.5.19",
+    "valibot": "^1.0.0"
   },
   "devDependencies": {
+    "@iconify-json/lucide": "^1.2.39",
     "@nuxt/eslint-config": "^0.7.5",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.18.0",
