--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxthub-starter",
+  "name": "andante",
   "private": true,
   "type": "module",
   "scripts": {
@@ -26,6 +26,7 @@
     "@nuxt/eslint-config": "^0.7.5",
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.18.0",
+    "nuxt-lodash": "^2.5.3",
     "vue-tsc": "^2.2.0",
     "wrangler": "3.103.2"
   },
