--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@nuxt/ui": "^3.0.2",
     "@nuxthub/core": "^0.8.12",
     "drizzle-orm": "^0.41.0",
+    "highlight.js": "^11.11.1",
+    "marked": "^15.0.11",
+    "marked-highlight": "^2.2.1",
     "nuxt": "^3.15.2",
     "nuxt-auth-utils": "^0.5.19",
     "valibot": "^1.0.0"
