--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
     "nuxt-lodash": "^2.5.3",
     "vue-tsc": "^2.2.0",
     "wrangler": "3.103.2"
-  }
+  },
+  "packageManager": "pnpm@9.15.4"
 }
