--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "marked-highlight": "^2.2.1",
     "nuxt": "^3.17.3",
     "nuxt-auth-utils": "^0.5.19",
+    "uncrypto": "^0.1.3",
     "valibot": "^1.0.0"
   },
   "devDependencies": {
