--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.7.5",
-    "@nuxt/ui": "^3.0.2",
+    "@nuxt/kit": "^3.17.3",
+    "@nuxt/ui": "^3.1.2",
     "@nuxthub/core": "^0.8.12",
     "drizzle-orm": "^0.41.0",
     "highlight.js": "^11.11.1",
+    "luxon": "^3.6.1",
     "marked": "^15.0.11",
     "marked-highlight": "^2.2.1",
     "nuxt": "^3.17.3",
