--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/kit": "^3.17.3",
     "@nuxt/ui": "^3.1.2",
     "@nuxthub/core": "^0.8.12",
+    "@types/luxon": "^3.6.2",
     "drizzle-orm": "^0.41.0",
     "highlight.js": "^11.11.1",
     "luxon": "^3.6.1",
